package eapli.base.InterviewModelManagement;

public class InterviewModel {
}
