package eapli.base.JobOpeningManagement.domain;

public class JobRequirement {
}
